--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -15,7 +15,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: 123
         ports:
           - 5432:5432
         # needed because the postgres container does not provide a healthcheck
@@ -40,6 +40,9 @@ jobs:
 
       - name: Format code style
         run: lein bikeshed
+
+      - name: flyway migration
+        run: lein with-profile ci flyway migrate
 
       - name: Run test coverage
         run: lein with-profile ci cloverage
