--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -50,5 +50,12 @@ jobs:
       - name: Publish Unit Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1.9
         with:
-          # File pattern of test result files
           files: target/coverage/junit.xml
+
+      - name: Deploy to Heroku
+        uses: AkhileshNS/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_TOKEN}}
+          heroku_app_name: glavenus
+          heroku_email: ryujinwrath@gmail.com
+          healthcheck: true
